reactor(service): 채팅 멤버 조회 메서드 수정 DP-293